# starphone-pdv

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 59c771de0067_ensure_admin_user.py  74b333c189c7_user_product.py  7be266891568_product.py  7d43ca224a22_user.py  c1ee46cf8706_user_product.py
src/starphone_api/: auth.py  config.py  db.py  main.py  security.py
src/starphone_api/models/: __init__.py  category.py  product.py  user.py
src/starphone_api/routes/: __init__.py  auth.py  category.py  product.py  user.py
src/starphone_api/serializers/: __init__.py  auth.py  product.py  user.py
